--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 					</div>
 					<nav class="main-nav">
 						<ul>
-							<li class="active">
+							<li>
 								<a href="about.html">About us</a>
 							</li>
 							<li>
@@ -61,80 +61,24 @@
 			</div>
 		</header>
 
-		<main>
-			<section class="about-top-section">
-				<div class="about-wrapper">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-3 col-md-4">
-								<div class="bread-crumbs white-color">
-									<a href="#">home</a>
-									<a href="#" class="active-main-color">about us</a>
-								</div>
-								<div class="offer-title offer-title-top help-title">
-									<span class="main-color">How we <br>Help you</span>
-								</div>
-							</div>
-							<div class="col-lg-7 col-md-8 offset-lg-1">
-								<div class="about-info">
-									<p class="lg-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dodf eiusmod tempor incididunt ut labore et dolore magna ali. Utenim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utquipex ea commodo consequat.</p>
-									<p class="sm-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est lab, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-								</div>
-							</div>
-						</div>
+		<main class="login-main">
+			<div class="login-wrapper">
+				<span class="login-title">Sign in</span>
+				<form action="#">
+					<div class="login-form-row">
+						<label for="id-email">Email:</label>
+						<input id="id-email" type="email">
 					</div>
-				</div>
-				<img src="images/about-img.png" class="img-fluid about-img" alt="">
-			</section>
-			<section class="about-info-section">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-10 offset-md-1">
-							<div class="about-row left-img" style="background-image: url(images/about-img1.png)">
-								<div class="about-heading">
-									<div class="about-icon">
-										<img src="images/about-icon1.svg" class="img-fluid" alt="">
-									</div>
-									<span>financial investment <br> platform</span>
-								</div>
-								<div class="row">
-									<div class="col-md-7 offset-md-5">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-									</div>
-								</div>
-							</div>
-
-							<div class="about-row right-img" style="background-image: url(images/about-img2.png)">
-								<div class="about-heading">
-									<div class="about-icon">
-										<img src="images/about-icon2.svg" class="img-fluid" alt="">
-									</div>
-									<span>total managed <br>solution</span>
-								</div>
-								<div class="row">
-									<div class="col-md-7 offset-md-1">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-									</div>
-								</div>
-							</div>
-
-							<div class="about-row left-img" style="background-image: url(images/about-img3.png)">
-								<div class="about-heading">
-									<div class="about-icon">
-										<img src="images/about-icon3.svg" class="img-fluid" alt="">
-									</div>
-									<span>trusted industry <br>professionals</span>
-								</div>
-								<div class="row">
-									<div class="col-md-7 offset-md-5">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-									</div>
-								</div>
-							</div>
-						</div>
+					<div class="login-form-row">
+						<label for="id-password">Password:</label>
+						<input id="id-password" type="password">
 					</div>
-				</div>
-			</section>
+					<div class="login-form-buttons d-flex justify-content-between align-items-center">
+						<a href="#">Forgot your password?</a>
+						<input type="submit" value="Login">
+					</div>
+				</form>
+			</div>
 		</main>
 
 		<footer class="main-footer">
@@ -150,7 +94,7 @@
 					</div>
 					<div class="col-xl-5 col-lg-6 footer-menu-col">
 						<nav class="footer-nav">
-							<a href="about.html" class="active">about us</a>
+							<a href="about.html">about us</a>
 							<a href="offer.html">investment offers</a>
 							<a href="media.html">media</a>
 							<a href="#">blog</a>
