--- a/media.html
+++ b/media.html
@@ -49,8 +49,8 @@
 						</ul>
 					</nav>
 					<div class="header-buttons">
-						<a href="#" class="button-sign-up">Sign up</a>
-						<a href="#" class="button-login">Login</a>
+						<a href="signup.html" class="button-sign-up">Sign up</a>
+						<a href="login.html" class="button-login">Login</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
 							<span class="line2"></span>
