--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,7 @@
 					</div>
 					<nav class="main-nav">
 						<ul>
-							<li class="active">
+							<li>
 								<a href="about.html">About us</a>
 							</li>
 							<li>
@@ -61,80 +61,78 @@
 			</div>
 		</header>
 
-		<main>
-			<section class="about-top-section">
-				<div class="about-wrapper">
-					<div class="container">
+		<main class="login-main">
+			<div class="signup-wrapper">
+				<div class="login-wrapper">
+					<div class="hint-alerts error">
+						<mark>*Last Name - This field is required</mark>
+					</div>
+					<span class="login-title">CREATE AN ACCOUNT</span>
+					<form action="#">
 						<div class="row">
-							<div class="col-lg-3 col-md-4">
-								<div class="bread-crumbs white-color">
-									<a href="#">home</a>
-									<a href="#" class="active-main-color">about us</a>
-								</div>
-								<div class="offer-title offer-title-top help-title">
-									<span class="main-color">How we <br>Help you</span>
+							<div class="col-md-6">
+								<div class="login-form-row">
+									<label for="first-name">*First Name</label>
+									<input id="first-name" class="border-main-color" type="text">
 								</div>
 							</div>
-							<div class="col-lg-7 col-md-8 offset-lg-1">
-								<div class="about-info">
-									<p class="lg-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dodf eiusmod tempor incididunt ut labore et dolore magna ali. Utenim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utquipex ea commodo consequat.</p>
-									<p class="sm-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est lab, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+							<div class="col-md-6">
+								<div class="login-form-row">
+									<label for="last-name">*Last Name</label>
+									<input id="last-name" class="border-error" type="text">
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<img src="images/about-img.png" class="img-fluid about-img" alt="">
-			</section>
-			<section class="about-info-section">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-10 offset-md-1">
-							<div class="about-row left-img" style="background-image: url(images/about-img1.png)">
-								<div class="about-heading">
-									<div class="about-icon">
-										<img src="images/about-icon1.svg" class="img-fluid" alt="">
-									</div>
-									<span>financial investment <br> platform</span>
-								</div>
-								<div class="row">
-									<div class="col-md-7 offset-md-5">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-									</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="login-form-row">
+									<label for="email">*Email</label>
+									<input id="email" type="email">
 								</div>
 							</div>
-
-							<div class="about-row right-img" style="background-image: url(images/about-img2.png)">
-								<div class="about-heading">
-									<div class="about-icon">
-										<img src="images/about-icon2.svg" class="img-fluid" alt="">
-									</div>
-									<span>total managed <br>solution</span>
-								</div>
-								<div class="row">
-									<div class="col-md-7 offset-md-1">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-									</div>
-								</div>
-							</div>
-
-							<div class="about-row left-img" style="background-image: url(images/about-img3.png)">
-								<div class="about-heading">
-									<div class="about-icon">
-										<img src="images/about-icon3.svg" class="img-fluid" alt="">
-									</div>
-									<span>trusted industry <br>professionals</span>
-								</div>
-								<div class="row">
-									<div class="col-md-7 offset-md-5">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-									</div>
+							<div class="col-md-6">
+								<div class="login-form-row">
+									<label for="referer-code">Referer code</label>
+									<input id="referer-code" type="number">
 								</div>
 							</div>
 						</div>
-					</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="login-form-row">
+									<label for="pass">*Password</label>
+									<input id="pass" type="password">
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="login-form-row">
+									<label for="pass-repeat">*Repeat password</label>
+									<input id="pass-repeat" type="password">
+								</div>
+							</div>
+						</div>
+						<div class="checkbox">
+							<input id="check1" type="checkbox">
+							<label for="check1" class="d-flex">
+								<span><i class="material-icons">check</i></span>
+								<em>I have read & downloaded the <a href="#">Financial Services Guide</a></em>
+							</label>
+						</div>
+						<div class="checkbox">
+							<input id="check2" type="checkbox">
+							<label for="check2" class="d-flex">
+								<span><i class="material-icons">check</i></span>
+								<em>I accept the <a href="#">Terms & Conditions</a></em>
+							</label>
+						</div>
+						<div class="login-form-buttons d-flex justify-content-between align-items-center">
+							<a href="#">Forgot your password?</a>
+							<input type="submit" value="Register">
+						</div>
+					</form>
 				</div>
-			</section>
+				<p>The information on this site is of a general nature only. It does not take your specific needs or circumstances into consideration. You should look at your own personal situation and requirements before making any financial decisions. The information provided on this site about the financial products, is not an endorsement of these products.</p>
+			</div>
 		</main>
 
 		<footer class="main-footer">
@@ -150,7 +148,7 @@
 					</div>
 					<div class="col-xl-5 col-lg-6 footer-menu-col">
 						<nav class="footer-nav">
-							<a href="about.html" class="active">about us</a>
+							<a href="about.html">about us</a>
 							<a href="offer.html">investment offers</a>
 							<a href="media.html">media</a>
 							<a href="#">blog</a>
