Added active classes to signup and login buttons

--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 					</nav>
 					<div class="header-buttons">
 						<a href="signup.html" class="button-sign-up">Sign up</a>
-						<a href="login.html" class="button-login">Login</a>
+						<a href="login.html" class="button-login active">Login</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
 							<span class="line2"></span>
