--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
 						</ul>
 					</nav>
 					<div class="header-buttons">
-						<a href="signup.html" class="button-sign-up">Sign up</a>
+						<a href="signup.html" class="button-sign-up active">Sign up</a>
 						<a href="login.html" class="button-login">Login</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
