Added privacy policy and terms pages, fixed some styles from feedback

--- a/about.html
+++ b/about.html
@@ -67,10 +67,10 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-3 col-md-4">
-								<div class="bread-crumbs white-color">
+								<!--<div class="bread-crumbs white-color">
 									<a href="#">home</a>
 									<a href="#" class="active-main-color">about us</a>
-								</div>
+								</div>-->
 								<div class="offer-title offer-title-top help-title">
 									<span class="main-color">How we <br>Help you</span>
 								</div>
@@ -159,8 +159,8 @@
 						<nav class="footer-other-nav">
 							<a href="#">Contact</a>
 							<a href="#">Glossary of terms</a>
-							<a href="#">Terms & conditions</a>
-							<a href="#">privacy policy</a>
+							<a href="terms.html">Terms & conditions</a>
+							<a href="privacy-policy.html">privacy policy</a>
 						</nav>
 					</div>
 					<div class="col-xl-3 col-lg-2 download-app">
