--- a/index.html
+++ b/index.html
@@ -116,9 +116,6 @@
 									<div class="button-wrap">
 										<a href="#" class="btn-repeat gray">Know more</a>
 									</div>
-									<div class="button-wrap">
-										<a href="#" class="see-all-offers">See all current offers</a>
-									</div>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -138,6 +135,9 @@
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="button-wrap">
+						<a href="#" class="see-all-offers">See all current offers</a>
 					</div>
 				</div>
 				<div class="investment-board-container">
@@ -271,8 +271,8 @@
 						<nav class="footer-other-nav">
 							<a href="#">Contact</a>
 							<a href="#">Glossary of terms</a>
-							<a href="#">Terms & conditions</a>
-							<a href="#">privacy policy</a>
+							<a href="terms.html">Terms & conditions</a>
+							<a href="privacy-policy.html">privacy policy</a>
 						</nav>
 					</div>
 					<div class="col-xl-3 col-lg-2 download-app">
