--- a/media.html
+++ b/media.html
@@ -62,16 +62,16 @@
 		</header>
 
 		<main>
-			<img src="images/media-before.png" class="img-fluid" alt="">
+			<img src="images/media-before.png" class="img-fluid media-img" alt="">
 
 			<section class="latest-news-section">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div class="bread-crumbs ">
+							<!--<div class="bread-crumbs ">
 								<a href="#">home</a>
 								<a href="#" class="active-main-color">media</a>
-							</div>
+							</div>-->
 							<div class="offer-title offer-title-top latest-news-title">
 								<span class="main-color">Latest <br>News</span>
 							</div>
@@ -129,8 +129,8 @@
 						<nav class="footer-other-nav">
 							<a href="#">Contact</a>
 							<a href="#">Glossary of terms</a>
-							<a href="#">Terms & conditions</a>
-							<a href="#">privacy policy</a>
+							<a href="terms.html">Terms & conditions</a>
+							<a href="privacy-policy.html">privacy policy</a>
 						</nav>
 					</div>
 					<div class="col-xl-3 col-lg-2 download-app">
