--- a/offer.html
+++ b/offer.html
@@ -517,8 +517,8 @@
 						<nav class="footer-other-nav">
 							<a href="#">Contact</a>
 							<a href="#">Glossary of terms</a>
-							<a href="#">Terms & conditions</a>
-							<a href="#">privacy policy</a>
+							<a href="terms.html">Terms & conditions</a>
+							<a href="privacy-policy.html">privacy policy</a>
 						</nav>
 					</div>
 					<div class="col-xl-3 col-lg-2 download-app">
