--- a/signup.html
+++ b/signup.html
@@ -122,7 +122,7 @@
 							<input id="check2" type="checkbox">
 							<label for="check2" class="d-flex">
 								<span><i class="material-icons">check</i></span>
-								<em>I accept the <a href="#">Terms & Conditions</a></em>
+								<em>I accept the <a href="terms.html">Terms & conditions</a></em>
 							</label>
 						</div>
 						<div class="login-form-buttons d-flex justify-content-between align-items-center">
@@ -157,8 +157,8 @@
 						<nav class="footer-other-nav">
 							<a href="#">Contact</a>
 							<a href="#">Glossary of terms</a>
-							<a href="#">Terms & conditions</a>
-							<a href="#">privacy policy</a>
+							<a href="terms.html">Terms & conditions</a>
+							<a href="privacy-policy.html">privacy policy</a>
 						</nav>
 					</div>
 					<div class="col-xl-3 col-lg-2 download-app">
