--- a/offer.html
+++ b/offer.html
@@ -11,9 +11,8 @@
 
 		<link media="all" rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
 		<link media="all" rel="stylesheet" href="css/fontawesome-all.min.css" type="text/css" />
-		<link media="all" rel="stylesheet" href="css/style.css" type="text/css" />
-		<link media="all" rel="stylesheet" href="css/fonts.css" type="text/css" />
 		<link media="all" rel="stylesheet" href="css/slick.css" type="text/css" />
+		<link media="all" rel="stylesheet" href="css/offer.css" type="text/css" />
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
@@ -623,7 +622,7 @@
 						</div>
 						<em class="main-color">Clients that fail to settle the Offer once bids are accepted may not be eligible to participate in future AKELA offers.</em>
 						<div class="invest-form-row d-flex justify-content-between align-items-center flex-wrap">
-							<p>By clicking Submit, you agree to our <a href="#">terms and conditions</a> and express your interest in investing in . We will contact you to confirm your Allocation</p>
+							<p>By clicking Submit, you agree to our <a href="terms.html">terms and conditions</a> and express your interest in investing in . We will contact you to confirm your Allocation</p>
 							<div class="input-submit">
 								<input type="submit" value="Submit">
 							</div>
