--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -11,9 +11,7 @@
 
 		<link media="all" rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
 		<link media="all" rel="stylesheet" href="css/fontawesome-all.min.css" type="text/css" />
-		<link media="all" rel="stylesheet" href="css/style.css" type="text/css" />
-		<link media="all" rel="stylesheet" href="css/fonts.css" type="text/css" />
-		<link media="all" rel="stylesheet" href="css/slick.css" type="text/css" />
+		<link media="all" rel="stylesheet" href="css/privacy-terms.css" type="text/css" />
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
