Changed buttons size and text on login page

--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 
 		<main class="login-main">
 			<div class="login-wrapper">
-				<span class="login-title">Sign in</span>
+				<span class="login-title">Login</span>
 				<form action="#">
 					<div class="login-form-row">
 						<label for="id-email">Email:</label>
