Overviwew page desktop

--- a/change-pass.html
+++ b/change-pass.html
@@ -15,7 +15,7 @@
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header darkHeader">
@@ -48,7 +48,7 @@
 					</nav>
 					<div class="header-buttons">
 						<a href="signup.html" class="button-sign-up">Sign up</a>
-						<a href="login.html" class="button-login active">Login</a>
+						<a href="login.html" class="button-login">Login</a>
 						<div class="mobile-menu-button">
 							<span class="line1"></span>
 							<span class="line2"></span>
@@ -61,18 +61,15 @@
 
 		<main class="login-main">
 			<div class="login-wrapper">
-				<span class="login-title">Login</span>
+				<span class="login-title">CHANGE YOUR PASSWORD</span>
+				<h3>PLEASE ENTER YOUR EMAIL ADDRESS</h3>
+				<p>We will check your email against our records and send you instructions on how to reset your password</p>
 				<form action="#">
 					<div class="login-form-row">
 						<label for="id-email">Email:</label>
 						<input id="id-email" type="email">
 					</div>
-					<div class="login-form-row">
-						<label for="id-password">Password:</label>
-						<input id="id-password" type="password">
-					</div>
-					<div class="login-form-buttons d-flex justify-content-between align-items-center">
-						<a href="#">Forgot your password?</a>
+					<div class="login-form-buttons d-flex justify-content-end align-items-center">
 						<input type="submit" value="Login">
 					</div>
 				</form>
