--- a/media.html
+++ b/media.html
@@ -15,7 +15,7 @@
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css">
 	</head>
 	<body>
 		<header class="main-header darkHeader">
@@ -92,12 +92,12 @@
 							</div>
 
 							<div class="pagination d-flex align-items-center">
-								<a href="#" class="prev"><i class="material-icons">chevron_left</i></a>
+								<a href="#" class="prev"><i class="mdi mdi-chevron-left"></i></a>
 								<a href="#" class="active">1</a>
 								<a href="#">2</a>
 								<a href="#">3</a>
 								<a href="#">4...</a>
-								<a href="#" class="next"><i class="material-icons">chevron_right</i></a>
+								<a href="#" class="next"><i class="mdi mdi-chevron-right"></i></a>
 							</div>
 						</div>
 					</div>
