--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header darkHeader">
@@ -112,14 +112,14 @@
 						<div class="checkbox">
 							<input id="check1" type="checkbox">
 							<label for="check1" class="d-flex">
-								<span><i class="material-icons">check</i></span>
+								<span><i class="mdi mdi-check"></i></span>
 								<em>I have read & downloaded the <a href="#">Financial Services Guide</a></em>
 							</label>
 						</div>
 						<div class="checkbox">
 							<input id="check2" type="checkbox">
 							<label for="check2" class="d-flex">
-								<span><i class="material-icons">check</i></span>
+								<span><i class="mdi mdi-check"></i></span>
 								<em>I accept the <a href="terms.html">Terms & conditions</a></em>
 							</label>
 						</div>
