--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header darkHeader">
