--- a/offer.html
+++ b/offer.html
@@ -16,7 +16,7 @@
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,400,600,700,900" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://cdn.materialdesignicons.com/2.3.54/css/materialdesignicons.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header darkHeader">
@@ -430,7 +430,7 @@
 								<div class="faq-container active">
 									<div class="faq-header">
 										<a class="faq-link" data-toggle="collapse" href="#collapse1">1. Ut enim ad minim veniam, quis exercitation ullamco nisi ut aliquip ex commodo conse?</a>
-										<i class="material-icons faq-arrow">keyboard_arrow_down</i>
+										<i class="mdi mdi-chevron-down faq-arrow"></i>
 									</div>
 									<div id="collapse1" class="collapse show" data-parent="#accordion">
 										<div class="faq-body">
@@ -442,7 +442,7 @@
 								<div class="faq-container">
 									<div class="faq-header">
 										<a class="faq-link" data-toggle="collapse" href="#collapse2">2. Quis exercitation ullamco nisi ut aliquip ex commodo conse?</a>
-										<i class="material-icons faq-arrow">keyboard_arrow_down</i>
+										<i class="mdi mdi-chevron-down faq-arrow"></i>
 									</div>
 									<div id="collapse2" class="collapse" data-parent="#accordion">
 										<div class="faq-body">
@@ -454,7 +454,7 @@
 								<div class="faq-container">
 									<div class="faq-header">
 										<a class="faq-link" data-toggle="collapse" href="#collapse3">3. Ut enim ad minim veniam, quis exercitation ullamco nisi ut aliquip ex commodo conse?</a>
-										<i class="material-icons faq-arrow">keyboard_arrow_down</i>
+										<i class="mdi mdi-chevron-down faq-arrow"></i>
 									</div>
 									<div id="collapse3" class="collapse" data-parent="#accordion">
 										<div class="faq-body">
@@ -466,7 +466,7 @@
 								<div class="faq-container">
 									<div class="faq-header">
 										<a class="faq-link" data-toggle="collapse" href="#collapse4">4. Quis exercitation ullamco nisi ut aliquip ex commodo conse?</a>
-										<i class="material-icons faq-arrow">keyboard_arrow_down</i>
+										<i class="mdi mdi-chevron-down faq-arrow"></i>
 									</div>
 									<div id="collapse4" class="collapse" data-parent="#accordion">
 										<div class="faq-body">
@@ -479,7 +479,7 @@
 								<div class="faq-container">
 									<div class="faq-header">
 										<a class="faq-link" data-toggle="collapse" href="#collapse5">5. Ut enim ad minim veniam, quis exercitation ullamco nisi ut aliquip ex commodo conse?</a>
-										<i class="material-icons faq-arrow">keyboard_arrow_down</i>
+										<i class="mdi mdi-chevron-down faq-arrow"></i>
 									</div>
 									<div id="collapse5" class="collapse" data-parent="#accordion">
 										<div class="faq-body">
