--- a/dashboard-overview.html
+++ b/dashboard-overview.html
@@ -116,18 +116,20 @@
 							</li>
 						</ul>
 					</nav>
-					<a href="#" class="user-info d-flex align-items-center">
-						<i class="mdi mdi-account-circle"></i>
-						<span>Hi, Bogdan</span>
-					</a>
-					<div class="mobile-menu-button">
-						<span class="line1"></span>
-						<span class="line2"></span>
-						<span class="line3"></span>
+					<div class="dashboard-header-right d-flex align-items-center">
+						<a href="#" class="user-info d-flex align-items-center">
+							<i class="mdi mdi-account-circle"></i>
+							<span>Hi, Bogdan</span>
+						</a>
+						<div class="mobile-menu-button">
+							<span class="line1"></span>
+							<span class="line2"></span>
+							<span class="line3"></span>
+						</div>
 					</div>
 				</header>
 				<div class="dashboard-wrapper">
-					<div class="dashboard-top-heading d-flex justify-content-between align-items-center">
+					<div class="dashboard-top-heading d-lg-flex justify-content-between align-items-center">
 						<div class="heading">
 							<h2>Please create an investment profile</h2>
 							<p>To invest in our offers you will need to create an investment profile</p>
@@ -164,7 +166,7 @@
 										<td><span>AU$</span> 1,024.00</td>
 										<td>Pay Submission Fee</td>
 										<td><a href="#" class="pay-apply-button">Pay now</a></td>
-										<td class="text-center">
+										<td class="text-center text-nowrap">
 											<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 											<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 										</td>
@@ -177,7 +179,7 @@
 										<td><span>AU$</span>20.00</td>
 										<td>Submit application</td>
 										<td><a href="#" class="pay-apply-button">Apply now</a></td>
-										<td class="text-center">
+										<td class="text-center text-nowrap">
 											<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 											<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 										</td>
@@ -197,9 +199,9 @@
 									</tr>
 								</tbody>
 							</table>
-							<div class="text-center">
-								<a href="#" class="btn-repeat dark db-load-more">Load more</a>
-							</div>
+						</div>
+						<div class="text-center">
+							<a href="#" class="btn-repeat dark db-load-more">Load more</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
@@ -230,7 +232,7 @@
 									<td><span>AU$</span>20.00</td>
 									<td>Awaiting Approval</td>
 									<td></td>
-									<td class="text-center">
+									<td class="text-center text-nowrap">
 										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 									</td>
@@ -243,7 +245,7 @@
 									<td><span>AU$</span>10.00</td>
 									<td>Payment Received</td>
 									<td><a href="#" class="pdf-button"><i class="mdi mdi-file-pdf"></i></a></td>
-									<td class="text-center">
+									<td class="text-center text-nowrap">
 										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 									</td>
@@ -256,16 +258,16 @@
 									<td><span>AU$</span> 1,000.00</td>
 									<td>Payment Received</td>
 									<td><a href="#" class="pdf-button"><i class="mdi mdi-file-pdf"></i></a></td>
-									<td class="text-center">
+									<td class="text-center text-nowrap">
 										<a href="#" class="control-buttons edit"><i class="mdi mdi-pencil"></i></a>
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 									</td>
 								</tr>
 								</tbody>
 							</table>
-							<div class="text-center">
-								<a href="#" class="btn-repeat dark db-load-more">Load more</a>
-							</div>
+						</div>
+						<div class="text-center">
+							<a href="#" class="btn-repeat dark db-load-more">Load more</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
@@ -342,9 +344,9 @@
 								</tr>
 								</tbody>
 							</table>
-							<div class="text-center">
-								<a href="#" class="btn-repeat dark db-load-more">Load more</a>
-							</div>
+						</div>
+						<div class="text-center">
+							<a href="#" class="btn-repeat dark db-load-more">Load more</a>
 						</div>
 					</div>
 					<div class="dashboard-row">
