Added loader effect to buttons, finished dashboard profile page

--- a/dashboard-overview.html
+++ b/dashboard-overview.html
@@ -34,7 +34,7 @@
 				</div>
 				<ul class="sidebar-nav">
 					<li>
-						<a href="#" class="active bottom-line">
+						<a href="dashboard-overview.html" class="active bottom-line">
 							<i class="mdi mdi-ticket"></i>
 							<span>Overview</span>
 						</a>
@@ -58,7 +58,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="dashboard-profile.html">
 							<i class="mdi mdi-account-circle"></i>
 							<span>Profile</span>
 						</a>
@@ -138,7 +138,7 @@
 					</div>
 					<div class="dashboard-row">
 						<div class="dashboard-repeat-title">
-							<h3>Outstanding Payment</h3>
+							<h3>Outstanding Payments</h3>
 							<p>The following Offer applications are awaiting payment. Please transfer the funds by the due date.  Click on the PAY NOW link for transfer details.
 								<br>
 								If you have already transferred the funds, we will update your application in due course.</p>
@@ -206,7 +206,7 @@
 					</div>
 					<div class="dashboard-row">
 						<div class="dashboard-repeat-title">
-							<h3>Applications</h3>
+							<h3>Submit application form</h3>
 							<p>Please complete & submit the online application form followed by payment for approved bids below.</p>
 						</div>
 						<div class="table-wrapper">
