--- a/login.html
+++ b/login.html
@@ -73,7 +73,12 @@
 					</div>
 					<div class="login-form-buttons d-flex justify-content-between align-items-center">
 						<a href="#">Forgot your password?</a>
-						<input type="submit" value="Login">
+						<button type="submit" class="progress-btn main-color-btn">
+							<span>Login</span>
+							<svg class="circle-loader" width="30" height="30" version="1.1" xmlns="http://www.w3.org/2000/svg">
+								<circle cx="15" cy="15" r="10">
+							</svg>
+						</button>
 					</div>
 				</form>
 			</div>
