Subscibtions page finished

--- a/dashboard-overview.html
+++ b/dashboard-overview.html
@@ -64,7 +64,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="dashboard-subscriptions.html">
 							<i class="mdi mdi-playlist-check"></i>
 							<span>Subscriptions</span>
 						</a>
@@ -76,13 +76,15 @@
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<i class="mdi mdi-bell"></i>
+						<a href="dashboard-notifications.html">
+							<i class="mdi mdi-bell">
+								<mark class="sidebar-sm-notifications"></mark>
+							</i>
 							<span>Notifications <em class="notif-number">26</em></span>
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="dashboard-change-pass.html">
 							<i class="mdi mdi-lastpass"></i>
 							<span>change password</span>
 						</a>
@@ -278,6 +280,9 @@
 							<table class="dashboard-table">
 								<thead>
 								<tr>
+									<th style="width: 23%;">TITLE</th>
+									<th style="width: 53%;">message</th>
+									<th style="width: 10%">Received</th>
 									<th style="width: 5%;">
 										<div class="checkbox">
 											<input id="check1" type="checkbox">
@@ -286,14 +291,15 @@
 											</label>
 										</div>
 									</th>
-									<th style="width: 23%;">TITLE</th>
-									<th style="width: 53%;">message</th>
-									<th style="width: 10%">Received</th>
-									<th></th>
+									<th class="text-center"><i class="mdi mdi-delete"></i></th>
 								</tr>
 								</thead>
 								<tbody>
 								<tr>
+									<td>708 test Application Processing and
+										Management Fee Invoice</td>
+									<td>Processing and Management Fee Invoice Fee invoice for Your application to offer 708 test. Please pay...</td>
+									<td>19 April 2018</td>
 									<td>
 										<div class="checkbox">
 											<input id="check2" type="checkbox">
@@ -302,15 +308,14 @@
 											</label>
 										</div>
 									</td>
-									<td>708 test Application Processing and
-										Management Fee Invoice</td>
-									<td>Processing and Management Fee Invoice Fee invoice for Your application to offer 708 test. Please pay...</td>
-									<td>19 April 2018</td>
 									<td class="text-center">
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 									</td>
 								</tr>
 								<tr>
+									<td>708 test Application Received</td>
+									<td>Hi Bogdan, Thank you for your application in 708 test. Your application will be reviewed and when ap...</td>
+									<td>19 April 2018</td>
 									<td>
 										<div class="checkbox">
 											<input id="check3" type="checkbox">
@@ -319,14 +324,14 @@
 											</label>
 										</div>
 									</td>
-									<td>708 test Application Received</td>
-									<td>Hi Bogdan, Thank you for your application in 708 test. Your application will be reviewed and when ap...</td>
-									<td>19 April 2018</td>
 									<td class="text-center">
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 									</td>
 								</tr>
 								<tr>
+									<td>AR FORCE NOTIFICATION</td>
+									<td>MEMBER APPLICATION - PAYMENT RECEIVED</td>
+									<td>19 April 2018</td>
 									<td>
 										<div class="checkbox">
 											<input id="check4" type="checkbox">
@@ -335,9 +340,6 @@
 											</label>
 										</div>
 									</td>
-									<td>AR FORCE NOTIFICATION</td>
-									<td>MEMBER APPLICATION - PAYMENT RECEIVED</td>
-									<td>19 April 2018</td>
 									<td class="text-center">
 										<a href="#" class="control-buttons delete"><i class="mdi mdi-delete"></i></a>
 									</td>
