Dashboard payments page finished

--- a/dashboard-change-pass.html
+++ b/dashboard-change-pass.html
@@ -70,7 +70,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="#" class="bottom-line">
+						<a href="dashboard-payments.html" class="bottom-line">
 							<i class="mdi mdi-credit-card"></i>
 							<span>Payments</span>
 						</a>
