--- a/dashboard-subscriptions.html
+++ b/dashboard-subscriptions.html
@@ -64,13 +64,13 @@
 						</a>
 					</li>
 					<li>
-						<a href="#" class="active">
+						<a href="dashboard-subscriptions.html" class="active">
 							<i class="mdi mdi-playlist-check"></i>
 							<span>Subscriptions</span>
 						</a>
 					</li>
 					<li>
-						<a href="#" class="bottom-line">
+						<a href="dashboard-payments.html" class="bottom-line">
 							<i class="mdi mdi-credit-card"></i>
 							<span>Payments</span>
 						</a>
